# markdocx

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
rule/: ai_gen_doc_rule.md  ai_gen_doc_rule_en.md
src/markdocx/: __init__.py  cli.py  code_renderer.py  core.py  diagram_renderer.py  docx_builder.py  math_renderer.py  md_parser.py  styles.py
